--- a/workplus/src/main/resources/templates/member/signup.html
+++ b/workplus/src/main/resources/templates/member/signup.html
@@ -7,6 +7,8 @@
 	  
     <head>
         <meta charset="UTF-8">
+	    <meta name="_csrf_header" content="${_csrf.headerName}" />
+	    <meta name="_csrf" content="${_csrf.token}" />
         <title>회원가입 페이지</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -26,10 +28,8 @@
 	            } 
 	        }
 	        
-	        function fn_idChk(){
-	        	/*<![CDATA[*/
-	        	var a = /*[[ ${result} ]]*/;
-	        	console.log(a);
+	        function fn_idChk(){       	
+	        	console.log($("#memberId").val());
 				$.ajax({
 					url : "/workplus/idChk.do",
 					type : "post",
@@ -42,9 +42,32 @@
 							$("#idChk").attr("value", "Y");
 							alert("사용가능한 아이디입니다.");
 						}
-					}
+					},
+					error : function(XMLHttpRequest, textStatus, errorThrown){ // 비동기 통신이 실패할경우 error 콜백으로 들어옵니다.
+	                    alert("통신 실패.")
+	                }
 				})
-				/*]]>*/
+			}
+	        
+	        function fn_nickChk(){       	
+	        	console.log($("#nickname").val());
+				$.ajax({
+					url : "/workplus/nickChk.do",
+					type : "post",
+					dataType : "json",
+					data : {"nickname" : $("#nickname").val()},
+					success : function(data){
+						if(data == 1){
+							alert("중복된 닉네임입니다.");
+						}else if(data == 0){
+							$("#nickChk").attr("value", "Y");
+							alert("사용가능한 닉네임입니다.");
+						}
+					},
+					error : function(XMLHttpRequest, textStatus, errorThrown){ // 비동기 통신이 실패할경우 error 콜백으로 들어옵니다.
+	                    alert("통신 실패.")
+	                }
+				})
 			}
         </script>
     </head>
@@ -52,16 +75,17 @@
         <h1>회원 가입</h1>
         <hr>
 
-        <form th:action="@{/workplus/signup.do}" method="post" enctype="multipart/form-data"><br>
+        <form th:action="@{/workplus/signup. do}" method="post" enctype="multipart/form-data"><br>
         	아이디<br>
         	<!--PATTER으로 메일 유효성 검사 -->
             <input type="email" name="memberId" id="memberId" value="" size="20" placeholder="이메일 아이디 입력" pattern="[A-Za-z0-9_]+[A-Za-z0-9]*[@]{1}[A-Za-z0-9]+[A-Za-z0-9]*[.]{1}[A-Za-z]{1,3}" required> 예) id@domain.com 
             <button class="idChk" type="button" id="idChk" onclick="fn_idChk();" value="N">중복확인</button><br>
             닉네임<br>
-            <input type="text" name="nickname" placeholder="nickname 입력"><br>
+            <input type="text" name="nickname" id="nickname" placeholder="nickname 입력">
+            <button class="nickChk" type="button" id="nickChk" onclick="fn_nickChk();" value="N">중복확인</button><br><br>
             패스워드<br>
             <!--patter으로 비밀번호 유효성 검사 minlength와 maxlength로 글자 수 제한-->
-            <input type="password" name="password" placeholder="password 입력" value="" minlength="4" maxlength="12" size="15" pattern="[a-zA-Z0-9]{4,12}" title="4~12자의 영문 대소문자와 숫자로만 입력."required/><br>
+            <input type="password" name="password" placeholder="password입력" value="" minlength="4" maxlength="12" size="15" pattern="[a-zA-Z0-9]{4,12}" title="4~12자의 영문 대소문자와 숫자로만 입력."required/><br>
             패스워드 확인<br>
             <input type="password" id="pw_cf" name="my_password_confirm" placeholder="password 재입력" onkeyup="check_pw()" value="" maxlength="12" size="15" required> 
             <span id="pw_check_msg"></span><br>
